lab3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
spec:
  rules:
    - http:
        paths:
          - path: /api/service1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port:
                  number: 80
          - path: /api/service2
            pathType: Prefix
            backend:
              service:
                name: service2-service
                port:
                  number: 80
          # - path: /api/root-service
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: root-service
          #       port:
          #         number: 80
